# AdviserAI-ta-base-model

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  ops.md  overview.md
src/model_tech/: artifacts.py  cli.py  config.py  gap_info.py  infer.py  labeling.py  logging.py  split.py  train.py  types.py
src/model_tech/api/: __init__.py  app.py  autotrain.py  jobs.py  routes.py  schemas.py
src/model_tech/features/: __init__.py  indicators.py
